--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <!-- Background Video -->
   <video autoplay muted loop playsinline id="bg-video">
     <source src="newnewnewRevenue.mp4" type="video/mp4">
+    <track src="video/captions.vtt" kind="subtitles" srclang="en" label="English" default>
     Your browser does not support background video.
   </video>
 
