--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section id="services">
       <h2>My Services</h2>
       <ul>
-        <li><strong>Video Editing</strong> – Clean, professional cuts for all platforms.</li>
-        <li><strong>Captioning & Subtitling</strong> – Accessible content for every audience.</li>
-        <li><strong>Creative Video Scripting</strong> – Hook-driven, engaging storylines.</li>
+        <li><strong>HealthCare Revenue Optimization</strong> – We help healthcare providers optimize billing, reduce denials, and improve cash flow.  Smarter systems. Fewer claim rejections. More revenue.</li>
+        <li><strong>Healthcare Business Analysis </strong> – Analyzing workflows, identifying gaps, and driving smarter healthcare solutions. Supporting better care and efficient operations through analytics and process improvement.</li>
+        <li><strong>Business Analysis on all Business Domains</strong> – Connecting data, people, and goals to solve complex business challenges.</li>
       </ul>
     </section>
 
