--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name – Services</title>
+  <title>Our – Services</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,7 +18,7 @@
   <div class="overlay-content">
     <header>
       <h1></h1>
-      <p>I help creators and businesses communicate better through video.</p>
+      <p>We help uncovering insights that drive smarter decisions and strategic growth.</p>
     </header>
 
     <section id="services">
