--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>📧 <a href="mailto:you@example.com">you@example.com</a></p>
+      <p>📧 <a href="mailto:info@moomina12@yahoo.com"></a></p>
     </section>
 
     <footer>
-      <p>© 2025 Your Name</p>
+      <p>© 2025 Moomina Sereefa</p>
     </footer>
   </div>
 
