--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section id="services">
-      <h2>My Services</h2>
+      <h2>We Provide: Services</h2>
       <ul>
         <li><strong>HealthCare Revenue Optimization</strong> – We help healthcare providers optimize billing, reduce denials, and improve cash flow.  Smarter systems. Fewer claim rejections. More revenue.</li>
         <li><strong>Healthcare Business Analysis </strong> – Analyzing workflows, identifying gaps, and driving smarter healthcare solutions. Supporting better care and efficient operations through analytics and process improvement.</li>
