--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Background Video -->
   <video autoplay muted loop playsinline id="bg-video">
-    <source src="video/newnewnewRevenue.mp4" type="video/mp4">
+    <source src="newnewnewRevenue.mp4" type="video/mp4">
     Your browser does not support background video.
   </video>
 
