--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="overlay-content">
     <header>
       <h1>Welcome</h1>
-      <p>We help uncover insights that drive smarter decisions and strategic growth.</p>
+      <p>Connecting data, people, and goals to solve complex business challenges</p>
     </header>
 
     <section id="services">
