--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Background Video -->
   <video autoplay muted loop playsinline id="bg-video">
     <source src="newnewnewRevenue.mp4" type="video/mp4">
-    <track src="video/captions.vtt" kind="subtitles" srclang="en" label="English" default>
+    <track src="captions.vtt" kind="subtitles" srclang="en" label="English" default>
     Your browser does not support background video.
   </video>
 
@@ -44,7 +44,7 @@
   <!-- Caption Sync Script -->
   <script>
     const captions = [
-      { time: 0, heading: "Welcome! I provide expert Business Analysis services.", service: "" },
+      { time: 0, heading: "Welcome! We provide expert Business Analysis services.", service: "" },
       { time: 4, heading: "Optimizing Healthcare Revenue", service: "We reduce denials and boost revenue for providers." },
       { time: 9, heading: "Smarter Systems. Better Care.", service: "Using business insights to transform health services." },
       { time: 14, heading: "Business Analysis Beyond Healthcare", service: "Serving retail, technology, finance, and more." },
